--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -39,9 +39,8 @@
 .modal__title {
   margin-bottom: 12px;
 
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
+  @include font(700, 20px, 1.15);
+
   text-align: center;
   color: $tittle-text-color;
 }
