--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import './utils/hidden';
 @import './base/common';
 @import './base/reset';
+@import './utils/mixins';
 
 @import './components/container';
 @import './components/section';
