--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ img {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:hover, .logo:focus {
@@ -108,6 +109,7 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
@@ -143,6 +145,7 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 20px;
 }
@@ -167,6 +170,7 @@ img {
   margin-right: 12px;
   font-size: 16px;
   line-height: 1.25;
+  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -232,6 +236,7 @@ img {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
+  letter-spacing: 0.03em;
   text-align: center;
   color: #212121;
 }
@@ -495,10 +500,14 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
 .advantages-list__text {
+  font-size: 14px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.71;
 }
@@ -525,6 +534,7 @@ img {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 
 .work-list {
@@ -552,6 +562,7 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
@@ -569,6 +580,7 @@ img {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 
 .team-list {
@@ -597,12 +609,14 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .team-list__text {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -637,11 +651,11 @@ img {
 
 .clients__title {
   margin-bottom: 50px;
-  text-align: center;
   color: #212121;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -692,10 +706,11 @@ img {
 }
 
 .address__link {
-  font-style: normal;
   font-weight: 400;
-  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address__link:hover, .address__link:focus {
@@ -724,6 +739,7 @@ img {
   background-color: #f5f4fa;
   color: #212121;
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
   border: none;
@@ -773,6 +789,7 @@ img {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
+  letter-spacing: 0.03em;
 }
 
 .gallery-thumb {
@@ -790,6 +807,7 @@ img {
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
+  letter-spacing: 0.03em;
   color: #ffffff;
   background-color: #2196f3;
   transform: translateY(100%);
