--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -4,10 +4,7 @@
   background-color: $accent-color;
   color: $primary-color;
 
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+  @include font(700, 16px, 1.88, 0.06em);
 
   cursor: pointer;
   transition: background-color 250ms $timing-function;
