--- a/sass/components/_join-us.scss
+++ b/sass/components/_join-us.scss
@@ -8,9 +8,8 @@
   margin-bottom: 20px;
 
   color: $primary-color;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(700, 14px, 1.14);
+
   text-transform: uppercase;
 }
 .join-list {
