--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -11,12 +11,13 @@
   margin-bottom: 10px;
 
   color: $tittle-text-color;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(700, 14px, 1.14);
+
   text-transform: uppercase;
 }
 .advantages-list__text {
+  @include font(null, 14px, 1.25);
+
   font-size: 14px;
   line-height: 1.71;
 }
