--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -19,11 +19,9 @@
   color: $primary-color;
 }
 .address__link {
-  font-style: normal;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.6);
+  @include font(400, 14px, 1.71);
 
-  line-height: 1.71;
+  color: rgba(255, 255, 255, 0.6);
 
   transition: color 250ms $timing-function;
   &:hover,
