--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -24,10 +24,8 @@
   margin-right: auto;
 
   color: $primary-color;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
+  @include font(900, 44px, 1.36, 0.06em);
+
   text-transform: uppercase;
 }
 .hero__btn {
