Доопрацювання по міксину в хедері

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -21,6 +21,7 @@
   padding-top: 32px;
   padding-bottom: 32px;
   color: $tittle-text-color;
+  @include font(500, 14px, 1.14, 0.02em);
 
   transition: color 250ms $timing-function;
   &:hover,
@@ -57,6 +58,7 @@
   padding-top: 32px;
   padding-bottom: 32px;
   color: $primary-text-color;
+  @include font(500, 14px, 1.14, 0.02em);
 
   transition: color 250ms $timing-function;
   &:hover,
