--- a/css/main.css
+++ b/css/main.css
@@ -42,10 +42,7 @@ img {
 
 .link {
   text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  font-style: normal;
 }
 
 .container {
@@ -400,6 +397,10 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav__link:hover, .nav__link:focus {
@@ -436,6 +437,10 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts__link:hover, .contacts__link:focus {
