--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -6,9 +6,5 @@
 }
 .link {
   text-decoration: none;
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  font-style: normal;
 }
